# rwkv-quant

./: .gitignore  NEXT_SESSION.md  README.md  STRUCTURE.md  k3_patch.py  pyproject.toml
rwkv_quant/: __init__.py  api.py  presets.py
rwkv_quant/calibration/: __init__.py  ablation.py  fake_quant.py  group_config.py  outlier_scan.py
rwkv_quant/formats/: __init__.py  export_mlx.py  reader.py  schema.py  writer.py
rwkv_quant/models/: __init__.py  naming.py  rwkv7_ref.py
tests/: _gw_old_for_ab.py  analyze_cmdbuf.py  bench_4way_decode_ab.py  bench_4way_full_ab.py  bench_affine_vs_champion_ab.py  bench_cmix_split.py  bench_compile_overhead.py  bench_compute_ceiling.py  bench_decode_pipelined.py  bench_dispatch_floor.py  bench_gemv_rsweep.py  bench_gemv_v3.py  bench_gw_chain.py  bench_gw_chain2.py  bench_gw_gemv.py  bench_gw_nb_groups.py  bench_gw_nb_sweep.py  bench_int5_discrim.py  bench_int5_variants.py  bench_k3_cmix_sweep.py  bench_k3_e2e_ab.py  bench_k3h_e2e_ab.py  bench_kernel3_proto.py  bench_kernel3_protoC.py  bench_kernel3_protoD.py  bench_kernel3_protoE.py  bench_kernel3_protoF.py  bench_kernel3_protoF2.py  bench_kernel3_protoF3.py  bench_kernel4_roofline.py  bench_kernel_clean.py  bench_mlx_vs_gw_ab.py  bench_mlx_vs_gw_prefill_ab.py  bench_nb1_vs_nb2_ab.py  bench_prefill.py  bench_qsqm_ab.py  bench_quant_linear.py  bench_verify_cost.py  bench_verify_cost_affine.py  bench_verify_cost_compiled.py  (+53 more)
tests/ane_probe/: bench.swift  decode_bench.swift  inspect.swift  test_asset.swift
tests/dev/: dump_ref_bits.py  mlx_dequant_hotpath.py  mlx_dequant_precise_fast.py  (+4 more)
(+4 files in other folders)
