[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "rwkv-quant"
version = "0.1.0"
description = "Quantization toolkit and Metal inference backend for RWKV-7 on Apple Silicon"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Alexei Goncharov" }]
keywords = ["rwkv", "quantization", "mlx", "metal", "apple-silicon", "llm", "inference"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
]
dependencies = [
    "mlx>=0.31",
    "numpy",
    "torch",
    "safetensors",
    "rwkv-metal>=0.1.3",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://impulseleap.com"

[tool.setuptools.packages.find]
include = ["rwkv_quant*"]
